<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".create2Activity">

    <View
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@drawable/border3"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/criaco_de_notificaces"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="#FFFFFF"
        android:background="@null"
        android:layout_marginTop="60dp"
        android:layout_marginStart="6dp"
        />

    <Button
        android:id="@+id/botaovoltarcreate"
        android:layout_width="90dp"
        android:layout_height="45dp"
        android:layout_marginTop="100dp"
        android:text="@string/Voltar"
        android:textColor="@color/black"
        android:background="#00FF0000"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Tipo"
        android:textSize="26sp"
        android:textStyle="bold"
        android:layout_marginTop="180dp"
        android:layout_marginStart="16dp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/publica"
        android:textSize="16sp"
        android:layout_marginTop="250dp"
        android:layout_marginStart="60dp"
        />

    <Button
        android:layout_width="14dp"
        android:layout_height="22dp"
        android:layout_marginTop="250dp"
        android:layout_marginStart="40dp"
        android:backgroundTint="@color/grey"
        />

    <Button
        android:layout_width="14dp"
        android:layout_height="22dp"
        android:layout_marginTop="300dp"
        android:layout_marginStart="40dp"
        android:backgroundTint="@color/grey"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/privada"
        android:textSize="16sp"
        android:layout_marginTop="300dp"
        android:layout_marginStart="60dp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/disciplina"
        android:textSize="26sp"
        android:textStyle="bold"
        android:layout_marginTop="350dp"
        android:layout_marginStart="16dp"
        />

    <EditText
        android:layout_width="380dp"
        android:layout_height="35dp"
        android:hint="@string/nome_da_disciplina"
        android:background="@drawable/border"
        android:layout_marginTop="400dp"
        android:layout_centerHorizontal="true"
        android:paddingStart="18dp"
        android:paddingEnd="0dp"
        />

    <Button
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:text="@string/confirmar"
        android:textSize="16sp"
        android:layout_marginTop="460dp"
        android:layout_centerHorizontal="true"
        android:backgroundTint="@color/green"
        />

</RelativeLayout>