<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <View
        android:id="@+id/rectangle"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@color/green"
        android:layout_marginTop="0dp"
        />

    <TextView
        android:id="@+id/editTextLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/beff_login"
        android:textSize="26sp"
        android:textColor="#FFFFFF"
        android:layout_centerHorizontal="true"
        android:textStyle="bold"
        android:background="@null"
        android:layout_marginTop="30dp"
        android:gravity="center"
        />

    <Button
        android:id="@+id/botaovoltarcadastro"
        android:layout_width="90dp"
        android:layout_height="45dp"
        android:layout_marginTop="100dp"
        android:text="@string/Voltar"
        android:textColor="@color/black"
        android:background="#00FF0000"
        />

    <TextView
        android:id="@+id/editTextLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/faca_seu_login"
        android:textSize="26sp"
        android:textStyle="bold"
        android:textColor="#000000"
        android:background="@null"
        android:layout_marginTop="160dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        />

    <EditText
        android:id="@+id/editMatricula"
        android:layout_width="350dp"
        android:layout_height="35dp"
        android:hint="@string/matricula_login"
        android:inputType="text"
        android:background="@drawable/border"
        android:paddingStart="18dp"
        android:paddingEnd="0dp"
        android:layout_marginTop="230dp"
        android:layout_centerHorizontal="true"
        />

    <EditText
        android:id="@+id/editTextSenha"
        android:layout_width="350dp"
        android:layout_height="35dp"
        android:hint="@string/senha_login"
        android:inputType="textPassword"
        android:background="@drawable/border"
        android:paddingStart="18dp"
        android:paddingEnd="0dp"
        android:layout_marginTop="280dp"
        android:layout_centerHorizontal="true"
        />

    <TextView
        android:id="@+id/editTextManterConectado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/quero_permanecer_conectado_a"
        android:textColor="#000000"
        android:textSize="18sp"
        android:background="@null"
        android:layout_marginStart="100dp"
        android:layout_marginEnd="40dp"
        android:layout_marginTop="340dp"
        />

    <Button
        android:id="@+id/myButton20"
        android:layout_width="14dp"
        android:layout_height="22dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="341dp"
        android:backgroundTint="@color/grey"
        />

    <Button
        android:id="@+id/botaoconfirmarlogin"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="390dp"
        android:text="@string/conectar"
        android:textSize="18sp"
        android:backgroundTint="@color/green"
        android:textColor="#FFFFFF"
        />

</RelativeLayout>